terraform/security-groups.tf
# resource "aws_security_group" "jenkins_sg" {
#   name        = "jenkins-sg"
#   description = "Allow Jenkins access"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     description = "Jenkins UI"
#     from_port   = 8080
#     to_port     = 8080
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     description = "SSH"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["196.135.150.93/32"]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "jenkins-sg"
#   }
# }
